[persistence] Integrate JPA entities with ApplicationState and add DB reset/populate endpoints